--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -7,7 +7,9 @@
 		<script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
 		<script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 		<!-- lib -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+		<script src="lib/angular-mocks.js"></script>
 		<!-- main -->
 		<script src="main/hsf-form.js"></script>
 		<script src="main/hsf-element.js"></script>
