--- a/app/sample-1.html
+++ b/app/sample-1.html
@@ -3,15 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HSF Demo 1</title>
-		<link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-	</head>
-	<body ng-controller="Demo">
-
-		<body ng-controller="Test">
-			<div hsf-http-form url="'/some-url'" schema="theschema" success="successhandler" error="errorhandler"></div>
-		</body>
-		
-
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src="lib/angular/angular.js"></script>
 		<script src="js/hsf-form.js"></script>
 		<script src="js/hsf-http-form.js"></script>
@@ -22,30 +14,33 @@
 		<script src="js/hsf-input-string.js"></script>
 		<script>
 
-		function Demo($scope, $http){
+			function Demo($scope, $http){
 
-			$scope.theschema = { type: 'array', name: 'b', title: 'Outer Array', kids:
-				{ type: 'array', title: 'Inner Array', min: 2, max: 4, kids:
-					{ type: 'object', fields: [
-						{ type: 'string', name: 'x' },
-						{ type: 'string', name: 'y' },
-						{ type: 'string', name: 'z' }
-					]}
-				}
+				$scope.theschema = { type: 'array', name: 'b', title: 'Outer Array', kids:
+					{ type: 'array', title: 'Inner Array', min: 2, max: 4, kids:
+						{ type: 'object', fields: [
+							{ type: 'string', name: 'x' },
+							{ type: 'string', name: 'y' },
+							{ type: 'string', name: 'z' }
+						]}
+					}
+				};
+
+				$scope.successhandler = function(data, status, headers, config) {
+					alert(":)");
+				};
+
+				$scope.errorhandler = function(data, status, headers, config) {
+					alert("Oh boy, something erred");
+				};
+
 			};
 
-			$scope.successhandler = function(data, status, headers, config) {
-				alert(":)");
-			};
-
-			$scope.errorhandler = function(data, status, headers, config) {
-				alert("Oh boy, something erred");
-			};
-
-		};
-
-		angular.module('hsf-sample', ['hsf.directives']);
+			angular.module('hsf-sample', ['hsf.directives']);
 
 		</script>
+	</head>
+	<body ng-controller="Demo">
+		<hsf-http-form url="'/some-url'" schema="theschema" success="successhandler" error="errorhandler"/>
 	</body>
 </html>
