Added a second sample, plus some code cleanup

--- a/app/sample-1.html
+++ b/app/sample-1.html
@@ -5,13 +5,15 @@
 		<title>HSF Demo 1</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src="lib/angular/angular.js"></script>
-		<script src="js/hsf-form.js"></script>
-		<script src="js/hsf-http-form.js"></script>
-		<script src="js/hsf-element.js"></script>
+		<!-- core - always required -->
+		<script src="js/hsf-core.js"></script>
+		<!-- types -->
 		<script src="js/hsf-object.js"></script>
 		<script src="js/hsf-array.js"></script>
 		<script src="js/hsf-choice.js"></script>
 		<script src="js/hsf-input-string.js"></script>
+		<!-- utilities -->
+		<script src="js/util/hsf-http-form.js"></script>
 		<script>
 
 			function Demo($scope, $http){
