--- a/app/sample-1.html
+++ b/app/sample-1.html
@@ -5,21 +5,21 @@
 		<title>HSF Demo 1</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src="lib/angular/angular.js"></script>
-		<!-- core - always required -->
-		<script src="js/hsf-core.js"></script>
+		<!-- always required -->
+		<script src="js/hsf.js"></script>
 		<!-- types -->
-		<script src="js/hsf-object.js"></script>
-		<script src="js/hsf-array.js"></script>
-		<script src="js/hsf-choice.js"></script>
-		<script src="js/hsf-input-string.js"></script>
+		<script src="js/hsf-type-object.js"></script>
+		<script src="js/hsf-type-array.js"></script>
+		<script src="js/hsf-type-choice.js"></script>
+		<script src="js/hsf-type-string.js"></script>
 		<!-- utilities -->
 		<script src="js/util/hsf-http-form.js"></script>
 		<script>
 
 			function Demo($scope, $http){
 
-				$scope.theschema = { type: 'array', name: 'b', title: 'Outer Array', kids:
-					{ type: 'array', title: 'Inner Array', min: 2, max: 4, kids:
+				$scope.theschema = { type: 'array', title: 'Outer Array', fields:
+					{ type: 'array', title: 'Inner Array', min: 2, max: 4, fields:
 						{ type: 'object', fields: [
 							{ type: 'string', name: 'x' },
 							{ type: 'string', name: 'y' },
@@ -43,6 +43,8 @@
 		</script>
 	</head>
 	<body ng-controller="Demo">
-		<hsf-http-form url="'/some-url'" schema="theschema" success="successhandler" error="errorhandler"/>
+		<div class="container">
+			<hsf-http-form url="'/some-url'" schema="theschema" success="successhandler" error="errorhandler"/>
+		</div>
 	</body>
 </html>
