--- a/app/sample-2-choices.html
+++ b/app/sample-2-choices.html
@@ -5,15 +5,13 @@
 		<title>HSF Demo 2 - Choices</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src="lib/angular/angular.js"></script>
-		<!-- core - always required -->
-		<script src="js/hsf-core.js"></script>
+		<!-- always required -->
+		<script src="js/hsf.js"></script>
 		<!-- types -->
-		<script src="js/hsf-object.js"></script>
-		<script src="js/hsf-array.js"></script>
-		<script src="js/hsf-choice.js"></script>
-		<script src="js/hsf-input-string.js"></script>
-		<!-- utilities -->
-		<script src="js/util/hsf-http-form.js"></script>
+		<script src="js/hsf-type-object.js"></script>
+		<script src="js/hsf-type-array.js"></script>
+		<script src="js/hsf-type-choice.js"></script>
+		<script src="js/hsf-type-string.js"></script>
 		<script>
 
 			function Demo($scope, $http){
@@ -28,7 +26,7 @@
 						{ type: 'string', name: 'x' },
 						{ type: 'string', name: 'y' }
 					]},
-					{ type: 'choice', choices: [
+					{ type: 'choice', title:'Nested Choice', choices: [
 					{ type: 'object', title: '3D', fields: [
 						{ type: 'string', name: 'x' },
 						{ type: 'string', name: 'y' },
@@ -53,6 +51,8 @@
 		</script>
 	</head>
 	<body ng-controller="Demo">
-		<hsf-form schema="schema" handler="handler" enabled="enabled"/>
+		<div class="container">
+			<hsf-form schema="schema" handler="handler" enabled="enabled"/>
+		</div>
 	</body>
 </html>
